Analizador Semántico.output
State 185 conflicts: 1 shift/reduce


Grammar

    0 $accept: Programa $end

    1 Programa: Cabecera_programa Bloque

    2 $@1: %empty

    3 Bloque: OPEN_BLOCK $@1 VAR Variables_locales ENDVAR Declar_de_subprogs Sentencias END_BLOCK

    4 $@2: %empty

    5 Bloque: OPEN_BLOCK $@2 Declar_de_subprogs Sentencias END_BLOCK

    6 Declar_de_subprogs: Declar_subprog Declar_de_subprogs
    7                   | %empty

    8 $@3: %empty

    9 Declar_subprog: Cabecera_subprog $@3 Bloque

   10 Cabecera_programa: Tipo MAIN LEFT_PAR Lista_parametros RIGHT_PAR
   11                  | MAIN LEFT_PAR Lista_parametros RIGHT_PAR

   12 Variables_locales: Variables_locales Cuerpo_declar_variables
   13                  | %empty

   14 Cuerpo_declar_variables: Tipo Lista_identificador SEMICOLON
   15                        | error

   16 Lista_identificador: Lista_identificador COMMA ID
   17                    | ID

   18 $@4: %empty

   19 Cabecera_subprog: Tipo ID $@4 LEFT_PAR Lista_parametros RIGHT_PAR
   20                 | error

   21 Lista_parametros: Lista_parametros COMMA Parametros
   22                 | Parametros
   23                 | %empty
   24                 | error

   25 Parametros: Tipo ID

   26 Sentencias: Sentencias Sentencia
   27           | %empty

   28 Sentencia: Bloque
   29          | Sentencia_asignacion
   30          | Sentencia_entrada
   31          | Sentencia_salida
   32          | Sentencia_return
   33          | Sentencia_switch
   34          | ID INCR SEMICOLON
   35          | ID DECR SEMICOLON
   36          | INCR ID SEMICOLON
   37          | DECR ID SEMICOLON
   38          | LIST_HEAD ID SEMICOLON
   39          | ID AHEADBACK SEMICOLON
   40          | Sentencia_break
   41          | Sentencia_if
   42          | Sentencia_while

   43 @5: %empty

   44 Sentencia_asignacion: ID @5 ASSIGN Expresion SEMICOLON

   45 Sentencia_if: IF LEFT_PAR Expresion RIGHT_PAR Sentencia
   46             | IF LEFT_PAR Expresion RIGHT_PAR Sentencia ELSE Sentencia

   47 Sentencia_while: WHILE LEFT_PAR Expresion RIGHT_PAR Sentencia

   48 Sentencia_entrada: READ Lista_expresiones_o_cadena SEMICOLON

   49 Sentencia_salida: WRITE Lista_expresiones_o_cadena SEMICOLON

   50 Sentencia_return: RETURN Expresion SEMICOLON

   51 Sentencia_switch: SWITCH Bloque_switch

   52 Sentencia_break: BREAK SEMICOLON

   53 Bloque_switch: OPEN_BLOCK Sentencias_case END_BLOCK

   54 Sentencias_case: CASE Expresion COLON Bloque Sentencias_case
   55                | DEFAULT COLON Bloque Sentencias_case
   56                | %empty

   57 Lista_expresiones_o_cadena: Lista_expresiones_o_cadena COMMA Expresion
   58                           | Lista_expresiones_o_cadena COMMA STRING
   59                           | Expresion
   60                           | STRING

   61 Expresion: LEFT_PAR Expresion RIGHT_PAR
   62          | UNARY_OP Expresion
   63          | Expresion LOGIC_OR Expresion
   64          | Expresion LOGIC_AND Expresion
   65          | Expresion XOR Expresion
   66          | Expresion BIT_OR Expresion
   67          | Expresion BIT_AND Expresion
   68          | ADD_SUB Expresion
   69          | MULT Expresion
   70          | Expresion ADD_SUB Expresion
   71          | Expresion MULT Expresion
   72          | Expresion MULT_OPS Expresion
   73          | Expresion BIN_TER Expresion
   74          | Expresion EQ_NEQ Expresion
   75          | Expresion VALUE_COMP Expresion
   76          | Expresion DECR Expresion
   77          | Expresion INCR Expresion TERNARY Expresion
   78          | ID
   79          | Funcion
   80          | Constantes
   81          | Constante_lista
   82          | error

   83 Constantes: INT_VAR
   84           | BOOL_VAR
   85           | CHAR_VAR
   86           | FLOAT_VAR

   87 Constante_lista: LEFT_BRACK Lista_int RIGHT_BRACK SEMICOLON
   88                | LEFT_BRACK Lista_bool RIGHT_BRACK SEMICOLON
   89                | LEFT_BRACK Lista_float RIGHT_BRACK SEMICOLON
   90                | LEFT_BRACK Lista_char RIGHT_BRACK SEMICOLON
   91                | LEFT_BRACK RIGHT_BRACK SEMICOLON

   92 Lista_int: Lista_int COMMA INT_VAR
   93          | INT_VAR

   94 Lista_bool: Lista_bool COMMA BOOL_VAR
   95           | BOOL_VAR

   96 Lista_float: Lista_float COMMA FLOAT_VAR
   97            | FLOAT_VAR

   98 Lista_char: Lista_char COMMA CHAR_VAR
   99           | CHAR_VAR
  100           | ID LEFT_PAR RIGHT_PAR

  101 Funcion: ID LEFT_PAR Lista_expresiones RIGHT_PAR

  102 Lista_expresiones: Lista_expresiones COMMA Expresion
  103                  | Expresion

  104 Tipo: ELEM_TYPE
  105     | LIST ELEM_TYPE


Terminals, with rules where they appear

$end (0) 0
error (256) 15 20 24 82
MAIN (258) 10 11
OPEN_BLOCK (259) 3 5 53
END_BLOCK (260) 3 5 53
SEMICOLON (261) 14 34 35 36 37 38 39 44 48 49 50 52 87 88 89 90 91
COMMA (262) 16 21 57 58 92 94 96 98 102
LEFT_PAR (263) 10 11 19 45 46 47 61 100 101
RIGHT_PAR (264) 10 11 19 45 46 47 61 100 101
ASSIGN (265) 44
IF (266) 45 46
ELSE (267) 46
WHILE (268) 47
VAR (269) 3
ENDVAR (270) 3
SWITCH (271) 51
CASE (272) 54
BREAK (273) 52
RETURN (274) 50
ELEM_TYPE (275) 104 105
READ (276) 48
WRITE (277) 49
INCR (278) 34 36 77
DECR (279) 35 37 76
AHEADBACK (280) 39
UNARY_OP (281) 62
TERNARY (282) 77
BIN_TER (283) 73
BOOL_VAR (284) 84 94 95
INT_VAR (285) 83 92 93
FLOAT_VAR (286) 86 96 97
CHAR_VAR (287) 85 98 99
LIST (288) 105
STRING (289) 58 60
ID (290) 16 17 19 25 34 35 36 37 38 39 44 78 100 101
LEFT_BRACK (291) 87 88 89 90 91
RIGHT_BRACK (292) 87 88 89 90 91
COLON (293) 54 55
DEFAULT (294) 55
LOGIC_OR (295) 63
LOGIC_AND (296) 64
BIT_OR (297) 66
XOR (298) 65
BIT_AND (299) 67
EQ_NEQ (300) 74
VALUE_COMP (301) 75
ADD_SUB (302) 68 70
MULT (303) 69 71
MULT_OPS (304) 72
LIST_HEAD (305) 38
L_DECR (306)
L_INCR (307)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
Programa (54)
    on left: 1, on right: 0
Bloque (55)
    on left: 3 5, on right: 1 9 28 54 55
$@1 (56)
    on left: 2, on right: 3
$@2 (57)
    on left: 4, on right: 5
Declar_de_subprogs (58)
    on left: 6 7, on right: 3 5 6
Declar_subprog (59)
    on left: 9, on right: 6
$@3 (60)
    on left: 8, on right: 9
Cabecera_programa (61)
    on left: 10 11, on right: 1
Variables_locales (62)
    on left: 12 13, on right: 3 12
Cuerpo_declar_variables (63)
    on left: 14 15, on right: 12
Lista_identificador (64)
    on left: 16 17, on right: 14 16
Cabecera_subprog (65)
    on left: 19 20, on right: 9
$@4 (66)
    on left: 18, on right: 19
Lista_parametros (67)
    on left: 21 22 23 24, on right: 10 11 19 21
Parametros (68)
    on left: 25, on right: 21 22
Sentencias (69)
    on left: 26 27, on right: 3 5 26
Sentencia (70)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42, on right:
    26 45 46 47
Sentencia_asignacion (71)
    on left: 44, on right: 29
@5 (72)
    on left: 43, on right: 44
Sentencia_if (73)
    on left: 45 46, on right: 41
Sentencia_while (74)
    on left: 47, on right: 42
Sentencia_entrada (75)
    on left: 48, on right: 30
Sentencia_salida (76)
    on left: 49, on right: 31
Sentencia_return (77)
    on left: 50, on right: 32
Sentencia_switch (78)
    on left: 51, on right: 33
Sentencia_break (79)
    on left: 52, on right: 40
Bloque_switch (80)
    on left: 53, on right: 51
Sentencias_case (81)
    on left: 54 55 56, on right: 53 54 55
Lista_expresiones_o_cadena (82)
    on left: 57 58 59 60, on right: 48 49 57 58
Expresion (83)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82, on right: 44 45 46 47 50 54 57 59 61 62 63 64 65 66
    67 68 69 70 71 72 73 74 75 76 77 102 103
Constantes (84)
    on left: 83 84 85 86, on right: 80
Constante_lista (85)
    on left: 87 88 89 90 91, on right: 81
Lista_int (86)
    on left: 92 93, on right: 87 92
Lista_bool (87)
    on left: 94 95, on right: 88 94
Lista_float (88)
    on left: 96 97, on right: 89 96
Lista_char (89)
    on left: 98 99 100, on right: 90 98
Funcion (90)
    on left: 101, on right: 79
Lista_expresiones (91)
    on left: 102 103, on right: 101 102
Tipo (92)
    on left: 104 105, on right: 10 14 19 25


State 0

    0 $accept: . Programa $end

    MAIN       shift, and go to state 1
    ELEM_TYPE  shift, and go to state 2
    LIST       shift, and go to state 3

    Programa           go to state 4
    Cabecera_programa  go to state 5
    Tipo               go to state 6


State 1

   11 Cabecera_programa: MAIN . LEFT_PAR Lista_parametros RIGHT_PAR

    LEFT_PAR  shift, and go to state 7


State 2

  104 Tipo: ELEM_TYPE .

    $default  reduce using rule 104 (Tipo)


State 3

  105 Tipo: LIST . ELEM_TYPE

    ELEM_TYPE  shift, and go to state 8


State 4

    0 $accept: Programa . $end

    $end  shift, and go to state 9


State 5

    1 Programa: Cabecera_programa . Bloque

    OPEN_BLOCK  shift, and go to state 10

    Bloque  go to state 11


State 6

   10 Cabecera_programa: Tipo . MAIN LEFT_PAR Lista_parametros RIGHT_PAR

    MAIN  shift, and go to state 12


State 7

   11 Cabecera_programa: MAIN LEFT_PAR . Lista_parametros RIGHT_PAR

    error      shift, and go to state 13
    ELEM_TYPE  shift, and go to state 2
    LIST       shift, and go to state 3

    COMMA      reduce using rule 23 (Lista_parametros)
    RIGHT_PAR  reduce using rule 23 (Lista_parametros)

    Lista_parametros  go to state 14
    Parametros        go to state 15
    Tipo              go to state 16


State 8

  105 Tipo: LIST ELEM_TYPE .

    $default  reduce using rule 105 (Tipo)


State 9

    0 $accept: Programa $end .

    $default  accept


State 10

    3 Bloque: OPEN_BLOCK . $@1 VAR Variables_locales ENDVAR Declar_de_subprogs Sentencias END_BLOCK
    5       | OPEN_BLOCK . $@2 Declar_de_subprogs Sentencias END_BLOCK

    VAR       reduce using rule 2 ($@1)
    $default  reduce using rule 4 ($@2)

    $@1  go to state 17
    $@2  go to state 18


State 11

    1 Programa: Cabecera_programa Bloque .

    $default  reduce using rule 1 (Programa)


State 12

   10 Cabecera_programa: Tipo MAIN . LEFT_PAR Lista_parametros RIGHT_PAR

    LEFT_PAR  shift, and go to state 19


State 13

   24 Lista_parametros: error .

    $default  reduce using rule 24 (Lista_parametros)


State 14

   11 Cabecera_programa: MAIN LEFT_PAR Lista_parametros . RIGHT_PAR
   21 Lista_parametros: Lista_parametros . COMMA Parametros

    COMMA      shift, and go to state 20
    RIGHT_PAR  shift, and go to state 21


State 15

   22 Lista_parametros: Parametros .

    $default  reduce using rule 22 (Lista_parametros)


State 16

   25 Parametros: Tipo . ID

    ID  shift, and go to state 22


State 17

    3 Bloque: OPEN_BLOCK $@1 . VAR Variables_locales ENDVAR Declar_de_subprogs Sentencias END_BLOCK

    VAR  shift, and go to state 23


State 18

    5 Bloque: OPEN_BLOCK $@2 . Declar_de_subprogs Sentencias END_BLOCK

    error      shift, and go to state 24
    ELEM_TYPE  shift, and go to state 2
    LIST       shift, and go to state 3

    OPEN_BLOCK  reduce using rule 7 (Declar_de_subprogs)
    END_BLOCK   reduce using rule 7 (Declar_de_subprogs)
    IF          reduce using rule 7 (Declar_de_subprogs)
    WHILE       reduce using rule 7 (Declar_de_subprogs)
    SWITCH      reduce using rule 7 (Declar_de_subprogs)
    BREAK       reduce using rule 7 (Declar_de_subprogs)
    RETURN      reduce using rule 7 (Declar_de_subprogs)
    READ        reduce using rule 7 (Declar_de_subprogs)
    WRITE       reduce using rule 7 (Declar_de_subprogs)
    INCR        reduce using rule 7 (Declar_de_subprogs)
    DECR        reduce using rule 7 (Declar_de_subprogs)
    ID          reduce using rule 7 (Declar_de_subprogs)
    LIST_HEAD   reduce using rule 7 (Declar_de_subprogs)

    Declar_de_subprogs  go to state 25
    Declar_subprog      go to state 26
    Cabecera_subprog    go to state 27
    Tipo                go to state 28


State 19

   10 Cabecera_programa: Tipo MAIN LEFT_PAR . Lista_parametros RIGHT_PAR

    error      shift, and go to state 13
    ELEM_TYPE  shift, and go to state 2
    LIST       shift, and go to state 3

    COMMA      reduce using rule 23 (Lista_parametros)
    RIGHT_PAR  reduce using rule 23 (Lista_parametros)

    Lista_parametros  go to state 29
    Parametros        go to state 15
    Tipo              go to state 16


State 20

   21 Lista_parametros: Lista_parametros COMMA . Parametros

    ELEM_TYPE  shift, and go to state 2
    LIST       shift, and go to state 3

    Parametros  go to state 30
    Tipo        go to state 16


State 21

   11 Cabecera_programa: MAIN LEFT_PAR Lista_parametros RIGHT_PAR .

    $default  reduce using rule 11 (Cabecera_programa)


State 22

   25 Parametros: Tipo ID .

    $default  reduce using rule 25 (Parametros)


State 23

    3 Bloque: OPEN_BLOCK $@1 VAR . Variables_locales ENDVAR Declar_de_subprogs Sentencias END_BLOCK

    $default  reduce using rule 13 (Variables_locales)

    Variables_locales  go to state 31


State 24

   20 Cabecera_subprog: error .

    $default  reduce using rule 20 (Cabecera_subprog)


State 25

    5 Bloque: OPEN_BLOCK $@2 Declar_de_subprogs . Sentencias END_BLOCK

    $default  reduce using rule 27 (Sentencias)

    Sentencias  go to state 32


State 26

    6 Declar_de_subprogs: Declar_subprog . Declar_de_subprogs

    error      shift, and go to state 24
    ELEM_TYPE  shift, and go to state 2
    LIST       shift, and go to state 3

    OPEN_BLOCK  reduce using rule 7 (Declar_de_subprogs)
    END_BLOCK   reduce using rule 7 (Declar_de_subprogs)
    IF          reduce using rule 7 (Declar_de_subprogs)
    WHILE       reduce using rule 7 (Declar_de_subprogs)
    SWITCH      reduce using rule 7 (Declar_de_subprogs)
    BREAK       reduce using rule 7 (Declar_de_subprogs)
    RETURN      reduce using rule 7 (Declar_de_subprogs)
    READ        reduce using rule 7 (Declar_de_subprogs)
    WRITE       reduce using rule 7 (Declar_de_subprogs)
    INCR        reduce using rule 7 (Declar_de_subprogs)
    DECR        reduce using rule 7 (Declar_de_subprogs)
    ID          reduce using rule 7 (Declar_de_subprogs)
    LIST_HEAD   reduce using rule 7 (Declar_de_subprogs)

    Declar_de_subprogs  go to state 33
    Declar_subprog      go to state 26
    Cabecera_subprog    go to state 27
    Tipo                go to state 28


State 27

    9 Declar_subprog: Cabecera_subprog . $@3 Bloque

    $default  reduce using rule 8 ($@3)

    $@3  go to state 34


State 28

   19 Cabecera_subprog: Tipo . ID $@4 LEFT_PAR Lista_parametros RIGHT_PAR

    ID  shift, and go to state 35


State 29

   10 Cabecera_programa: Tipo MAIN LEFT_PAR Lista_parametros . RIGHT_PAR
   21 Lista_parametros: Lista_parametros . COMMA Parametros

    COMMA      shift, and go to state 20
    RIGHT_PAR  shift, and go to state 36


State 30

   21 Lista_parametros: Lista_parametros COMMA Parametros .

    $default  reduce using rule 21 (Lista_parametros)


State 31

    3 Bloque: OPEN_BLOCK $@1 VAR Variables_locales . ENDVAR Declar_de_subprogs Sentencias END_BLOCK
   12 Variables_locales: Variables_locales . Cuerpo_declar_variables

    error      shift, and go to state 37
    ENDVAR     shift, and go to state 38
    ELEM_TYPE  shift, and go to state 2
    LIST       shift, and go to state 3

    Cuerpo_declar_variables  go to state 39
    Tipo                     go to state 40


State 32

    5 Bloque: OPEN_BLOCK $@2 Declar_de_subprogs Sentencias . END_BLOCK
   26 Sentencias: Sentencias . Sentencia

    OPEN_BLOCK  shift, and go to state 10
    END_BLOCK   shift, and go to state 41
    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    SWITCH      shift, and go to state 44
    BREAK       shift, and go to state 45
    RETURN      shift, and go to state 46
    READ        shift, and go to state 47
    WRITE       shift, and go to state 48
    INCR        shift, and go to state 49
    DECR        shift, and go to state 50
    ID          shift, and go to state 51
    LIST_HEAD   shift, and go to state 52

    Bloque                go to state 53
    Sentencia             go to state 54
    Sentencia_asignacion  go to state 55
    Sentencia_if          go to state 56
    Sentencia_while       go to state 57
    Sentencia_entrada     go to state 58
    Sentencia_salida      go to state 59
    Sentencia_return      go to state 60
    Sentencia_switch      go to state 61
    Sentencia_break       go to state 62


State 33

    6 Declar_de_subprogs: Declar_subprog Declar_de_subprogs .

    $default  reduce using rule 6 (Declar_de_subprogs)


State 34

    9 Declar_subprog: Cabecera_subprog $@3 . Bloque

    OPEN_BLOCK  shift, and go to state 10

    Bloque  go to state 63


State 35

   19 Cabecera_subprog: Tipo ID . $@4 LEFT_PAR Lista_parametros RIGHT_PAR

    $default  reduce using rule 18 ($@4)

    $@4  go to state 64


State 36

   10 Cabecera_programa: Tipo MAIN LEFT_PAR Lista_parametros RIGHT_PAR .

    $default  reduce using rule 10 (Cabecera_programa)


State 37

   15 Cuerpo_declar_variables: error .

    $default  reduce using rule 15 (Cuerpo_declar_variables)


State 38

    3 Bloque: OPEN_BLOCK $@1 VAR Variables_locales ENDVAR . Declar_de_subprogs Sentencias END_BLOCK

    error      shift, and go to state 24
    ELEM_TYPE  shift, and go to state 2
    LIST       shift, and go to state 3

    OPEN_BLOCK  reduce using rule 7 (Declar_de_subprogs)
    END_BLOCK   reduce using rule 7 (Declar_de_subprogs)
    IF          reduce using rule 7 (Declar_de_subprogs)
    WHILE       reduce using rule 7 (Declar_de_subprogs)
    SWITCH      reduce using rule 7 (Declar_de_subprogs)
    BREAK       reduce using rule 7 (Declar_de_subprogs)
    RETURN      reduce using rule 7 (Declar_de_subprogs)
    READ        reduce using rule 7 (Declar_de_subprogs)
    WRITE       reduce using rule 7 (Declar_de_subprogs)
    INCR        reduce using rule 7 (Declar_de_subprogs)
    DECR        reduce using rule 7 (Declar_de_subprogs)
    ID          reduce using rule 7 (Declar_de_subprogs)
    LIST_HEAD   reduce using rule 7 (Declar_de_subprogs)

    Declar_de_subprogs  go to state 65
    Declar_subprog      go to state 26
    Cabecera_subprog    go to state 27
    Tipo                go to state 28


State 39

   12 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce using rule 12 (Variables_locales)


State 40

   14 Cuerpo_declar_variables: Tipo . Lista_identificador SEMICOLON

    ID  shift, and go to state 66

    Lista_identificador  go to state 67


State 41

    5 Bloque: OPEN_BLOCK $@2 Declar_de_subprogs Sentencias END_BLOCK .

    $default  reduce using rule 5 (Bloque)


State 42

   45 Sentencia_if: IF . LEFT_PAR Expresion RIGHT_PAR Sentencia
   46             | IF . LEFT_PAR Expresion RIGHT_PAR Sentencia ELSE Sentencia

    LEFT_PAR  shift, and go to state 68


State 43

   47 Sentencia_while: WHILE . LEFT_PAR Expresion RIGHT_PAR Sentencia

    LEFT_PAR  shift, and go to state 69


State 44

   51 Sentencia_switch: SWITCH . Bloque_switch

    OPEN_BLOCK  shift, and go to state 70

    Bloque_switch  go to state 71


State 45

   52 Sentencia_break: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 72


State 46

   50 Sentencia_return: RETURN . Expresion SEMICOLON

    error       shift, and go to state 73
    LEFT_PAR    shift, and go to state 74
    UNARY_OP    shift, and go to state 75
    BOOL_VAR    shift, and go to state 76
    INT_VAR     shift, and go to state 77
    FLOAT_VAR   shift, and go to state 78
    CHAR_VAR    shift, and go to state 79
    ID          shift, and go to state 80
    LEFT_BRACK  shift, and go to state 81
    ADD_SUB     shift, and go to state 82
    MULT        shift, and go to state 83

    Expresion        go to state 84
    Constantes       go to state 85
    Constante_lista  go to state 86
    Funcion          go to state 87


State 47

   48 Sentencia_entrada: READ . Lista_expresiones_o_cadena SEMICOLON

    error       shift, and go to state 73
    LEFT_PAR    shift, and go to state 74
    UNARY_OP    shift, and go to state 75
    BOOL_VAR    shift, and go to state 76
    INT_VAR     shift, and go to state 77
    FLOAT_VAR   shift, and go to state 78
    CHAR_VAR    shift, and go to state 79
    STRING      shift, and go to state 88
    ID          shift, and go to state 80
    LEFT_BRACK  shift, and go to state 81
    ADD_SUB     shift, and go to state 82
    MULT        shift, and go to state 83

    Lista_expresiones_o_cadena  go to state 89
    Expresion                   go to state 90
    Constantes                  go to state 85
    Constante_lista             go to state 86
    Funcion                     go to state 87


State 48

   49 Sentencia_salida: WRITE . Lista_expresiones_o_cadena SEMICOLON

    error       shift, and go to state 73
    LEFT_PAR    shift, and go to state 74
    UNARY_OP    shift, and go to state 75
    BOOL_VAR    shift, and go to state 76
    INT_VAR     shift, and go to state 77
    FLOAT_VAR   shift, and go to state 78
    CHAR_VAR    shift, and go to state 79
    STRING      shift, and go to state 88
    ID          shift, and go to state 80
    LEFT_BRACK  shift, and go to state 81
    ADD_SUB     shift, and go to state 82
    MULT        shift, and go to state 83

    Lista_expresiones_o_cadena  go to state 91
    Expresion                   go to state 90
    Constantes                  go to state 85
    Constante_lista             go to state 86
    Funcion                     go to state 87


State 49

   36 Sentencia: INCR . ID SEMICOLON

    ID  shift, and go to state 92


State 50

   37 Sentencia: DECR . ID SEMICOLON

    ID  shift, and go to state 93


State 51

   34 Sentencia: ID . INCR SEMICOLON
   35          | ID . DECR SEMICOLON
   39          | ID . AHEADBACK SEMICOLON
   44 Sentencia_asignacion: ID . @5 ASSIGN Expresion SEMICOLON

    INCR       shift, and go to state 94
    DECR       shift, and go to state 95
    AHEADBACK  shift, and go to state 96

    $default  reduce using rule 43 (@5)

    @5  go to state 97


State 52

   38 Sentencia: LIST_HEAD . ID SEMICOLON

    ID  shift, and go to state 98


State 53

   28 Sentencia: Bloque .

    $default  reduce using rule 28 (Sentencia)


State 54

   26 Sentencias: Sentencias Sentencia .

    $default  reduce using rule 26 (Sentencias)


State 55

   29 Sentencia: Sentencia_asignacion .

    $default  reduce using rule 29 (Sentencia)


State 56

   41 Sentencia: Sentencia_if .

    $default  reduce using rule 41 (Sentencia)


State 57

   42 Sentencia: Sentencia_while .

    $default  reduce using rule 42 (Sentencia)

